<resources>
    <string name="app_name">PlaceWeatherMonitor</string>
    <string name="home_page">Домашняя\nстраница</string>
    <string name="deep_link">Пусто</string>
    <string name="fragment_home_page_notification_text">Вы уже находитесь на Домашней странице</string>

    <!-- ERRORS MESSAGES -->
    <string name="error_permissions_geodata_text">Разрешения не доступ к геоданным не получены</string>
    <string name="error_geolocation_needed_text">Пожалуйста, для работы приложения включите геолокацию.</string>
    <string name="error_get_data_not_for_current_window_text">ОШИБКА: Получены данные не для текущего окна.</string>
    <string name="data_text_sample_text">23-03-2024</string>
    <string name="place_text_sample_text">Орехово-Борисово</string>
    <string name="humidity_percent_value_sample_text">23</string>
    <string name="cloud_value_sample_text">23</string>
    <string name="wind_value_sample_text">23</string>
    <string name="temperature_min_value_sample_text">23</string>
    <string name="temperature_max_value_sample_text">23</string>
    <string name="cloudy_percent_value_sample_text">23</string>
    <string name="weather_detailed_data_text_sample_text">Детальная информация о погоде</string>
</resources>