<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:id="@+id/weather_info_container">

    <androidx.cardview.widget.CardView
        android:id="@+id/weather_info_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/weather_info_card_view_card_corner_radius"
        app:cardElevation="@dimen/weather_info_card_view_card_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/data_text"
                android:layout_width="@dimen/data_text_layout_width"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="15sp"
                android:textStyle="italic"
                android:ems="@integer/data_text_ems"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/data_text_sample_text"/>

            <TextView
                android:id="@+id/place_text"
                android:layout_width="@dimen/place_text_layout_width"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="@dimen/place_text_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/data_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/place_text_sample_text"/>


<!--region Иконки-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/humidity_image"
                android:layout_width="@dimen/humidity_image_layout_width"
                android:layout_height="@dimen/humidity_image_layout_height"
                android:layout_marginStart="@dimen/humidity_image_margin_start"
                android:layout_marginEnd="@dimen/humidity_image_margin_end"
                android:background="@drawable/ic_humidity_percent_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/temperature_image"
                app:layout_constraintTop_toBottomOf="@id/place_text" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/temperature_image"
                android:layout_width="@dimen/temperature_image_layout_width"
                android:layout_height="@dimen/temperature_image_layout_height"
                android:layout_marginStart="@dimen/temperature_image_margint_start"
                android:layout_marginEnd="@dimen/temperature_image_margin_end"
                android:background="@drawable/ic_temperature_24"
                app:layout_constraintStart_toEndOf="@id/humidity_image"
                app:layout_constraintEnd_toStartOf="@id/wind_image"
                app:layout_constraintTop_toBottomOf="@id/place_text" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wind_image"
                android:layout_width="@dimen/wind_image_layout_width"
                android:layout_height="@dimen/wind_image_layout_height"
                android:layout_marginStart="@dimen/wind_image_margin_start"
                android:layout_marginEnd="@dimen/wind_image_margin_end"
                android:background="@drawable/ic_wind_velocity_24"
                app:layout_constraintStart_toEndOf="@id/temperature_image"
                app:layout_constraintEnd_toStartOf="@id/cloud_image"
                app:layout_constraintTop_toBottomOf="@id/place_text" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cloud_image"
                android:layout_width="@dimen/cloud_image_layout_width"
                android:layout_height="@dimen/cloud_image_layout_height"
                android:layout_marginStart="@dimen/cloud_image_margin_start"
                android:layout_marginEnd="@dimen/cloud_image_margin_end"
                android:background="@drawable/ic_baseline_cloud_cover_24"
                app:layout_constraintStart_toEndOf="@id/wind_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_text" />
<!--endregion-->

<!--region Относительная влажность-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/humidity_percent_background"
                android:layout_width="@dimen/humidity_percent_background_layout_width"
                android:layout_height="@dimen/humidity_percent_background_layout_height"
                android:src="@drawable/ic_baseline_circle"
                app:layout_constraintBottom_toBottomOf="@id/humidity_percent_circle"
                app:layout_constraintEnd_toEndOf="@id/humidity_percent_circle"
                app:layout_constraintStart_toStartOf="@id/humidity_percent_circle"
                app:layout_constraintTop_toTopOf="@id/humidity_percent_circle"/>
            <TextView
                android:id="@+id/humidity_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/humidity_percent_value_text_size"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/humidity_percent_circle"
                app:layout_constraintEnd_toEndOf="@id/humidity_percent_circle"
                app:layout_constraintStart_toStartOf="@id/humidity_percent_circle"
                app:layout_constraintTop_toTopOf="@id/humidity_percent_circle"
                tools:text="@string/humidity_percent_value_sample_text"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/humidity_percent_circle"
                android:layout_width="@dimen/humidity_percent_circle_layout_width"
                android:layout_height="@dimen/humidity_percent_circle_layout_height"
                android:layout_marginStart="@dimen/humidity_percent_circle_margin_start"
                android:layout_marginTop="@dimen/humidity_percent_circle_margin_top"
                app:indicatorColor="@color/black"
                app:indicatorSize="@dimen/humidity_percent_circle_indicator_size"
                app:layout_constraintEnd_toStartOf="@id/humidity_image"
                app:layout_constraintTop_toTopOf="@id/humidity_image"
                app:trackColor="@color/white"
                app:trackCornerRadius="@dimen/humidity_percent_circle_corner_radius"
                app:trackThickness="@dimen/humidity_percent_circle_track_thickness"
                tools:progress="@integer/humidity_percent_circle_sample_progress" />
<!--endregion -->

            <TextView
                android:id="@+id/cloud_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/cloud_value_text_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/cloud_image"
                app:layout_constraintEnd_toEndOf="@id/cloud_image"
                app:layout_constraintTop_toBottomOf="@id/cloud_image"
                tools:text="@string/cloud_value_sample_text" />

            <TextView
                android:id="@+id/wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/wind_value_text_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/wind_image"
                app:layout_constraintEnd_toEndOf="@id/wind_image"
                app:layout_constraintTop_toBottomOf="@id/wind_image"
                tools:text="@string/wind_value_sample_text" />

<!--region Температуры-->
            <TextView
                android:id="@+id/temperature_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/temperature_min_value_text_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/temperature_image"
                app:layout_constraintTop_toBottomOf="@id/temperature_image"
                android:text="@string/temperature_min_value_sample_text" />
            <TextView
                android:id="@+id/temperature_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/temperature_max_value_text_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/temperature_image"
                app:layout_constraintTop_toBottomOf="@id/temperature_image"
                tools:text="@string/temperature_max_value_sample_text" />
<!--endregion-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
